# shapes

./: CMakeLists.txt  Circle.cpp  Circle.h  Shape.h  ShapeFactory.h  Square.cpp  Square.h  SquareFactory.h  main.cpp  readme.md  reame.md  shapeConfig.cmake
headers/: Circle.h  CircleFactory.h  Lozenge.h  LozengeFactory.h  Shape.h  ShapeFactory.h  Square.h  Triangle.h  TriangleFactory.h
source/: Circle.cpp  Lozenge.cpp  Square.cpp  Triangle.cpp
